--- a/数据库基础/索引.md
+++ b/数据库基础/索引.md
@@ -13,9 +13,11 @@ sort: 7
 
 ```note
 Q：对于每个记录都有索引，那索引的意义在哪里呢？
+
 A: 
 - 每个记录指的是“不同”的记录，而每一条记录是可能存在重复值的
 - 索引减少了存储空间，降低内存的压力
+
 ![image-20210502104439329](%E7%B4%A2%E5%BC%95.assets/image-20210502104439329.png)
 ```
 
@@ -60,7 +62,7 @@ A:
 
 - 辅助索引通常是对某一非排序字段上的每一个不同值有一个索引项：
 	索引字段即是该字段的不同值，而指针则指向包含该记录的块或该记录本身；
-- 当非排序字段为索引字段时，如该字段值不唯一，则要采用一个类似链表的结构来保存包含该字段值的所有记录的位置。
+- 当非排序字段为索引字段时，如该字段值不唯一，则要采用一个类似链表的结构来保存包含该字段值的所有记录的位置。（是不是和上面提到的稠密索引的第三种定位方式很像？）
 - 辅助索引是稠密索引，其检索效率有时相当高。
 
 ```note
@@ -80,9 +82,8 @@ A:
 **非聚簇索引—是指索引中邻近的记录在主文件中不一定是邻近存储的;**
 
 - 如果主文件的**某一排序字段不是主码**，则该字段上每个记录取值便不唯一，
-	此时该字段被称为聚簇字段；聚簇索引通常是定义在聚簇字段上。
-- 聚簇索引通常是对聚簇字段上的每一个不同值有一个索引项。
-	索引项的总数和主文件中聚簇字段上不同值的数目相同），索引字段即是聚簇字段的不同值，由于有相同聚簇字段值的记录可能存储于若干块中，则索引项的指针指向其中的第一个块。
+	此时该字段被称为**聚簇字段**；聚簇索引通常是定义在聚簇字段上。
+- 聚簇索引通常是对聚簇字段上的每一个不同值有一个索引项。（索引项的总数和主文件中聚簇字段上不同值的数目相同），索引字段即是聚簇字段的不同值，由于有相同聚簇字段值的记录可能存储于若干块中，则索引项的指针指向其中的第一个块。
 - 一个主文件只能有一个聚簇索引文件，但可以有多个非聚簇索引文件
 - **主索引通常是聚簇索引**(但其索引项总数不一定和主文件中聚簇字段上不同值的数目相同，其和主文件存储块数目相同)；
 	**辅助索引通常是非聚簇索引。**
@@ -112,20 +113,25 @@ B+树就是多级索引的一个体现。能够自动保持与主文件大小相
 一个存储块中应该放多少个索引项？
 ![image-20210502114505856](%E7%B4%A2%E5%BC%95.assets/image-20210502114505856.png)
 Pn表示指针（pointer）
+
 Kn表示索引字段值（key）
-我们假设一个P需要8字节，一个K需要4字节；则这个索引项一共的大小为`n*8+(n-1)*4`，那么存储块的大小/索引项的大小就是能放多少个索引项
+
+我们假设一个 P 需要8字节，一个K需要4字节；则这个索引项一共的大小为`n*8+(n-1)*4`，那么`存储块的大小/索引项的大小`就是能放多少个索引项
 ```
 
 ```tip
-为什么是n个P和n-1个K呢？下面先看看二叉搜索树的定义：
+为什么是 n 个 P 和 n-1 个 K 呢？下面先看看二叉搜索树的定义：
+
 > 二叉查找树（Binary Search Tree），（又：二叉搜索树，二叉排序树）它或者是一棵空树，或者是具有下列性质的二叉树： 若它的左子树不空，则左子树上所有结点的值均小于它的根结点的值； 若它的右子树不空，则右子树上所有结点的值均大于它的根结点的值； 它的左、右子树也分别为二叉排序树。
+
 B+树就相当于是n叉搜索树。
+
 一个小学问题：“道路种了n-1棵树，那么这条道路被分为了几段呢？”
 ```
 
-上面的n是一个索引块的容量。在实际使用中，不一定能够每次都达到他的容量。就比如烧水，并不是每一次都把水壶装满，才打开电源。但我们也不能让这个水壶里的水太少，否则每单位水消耗的电能就搞了，性价比就太低了。
+上面的 n 是一个索引块的容量。在实际使用中，不一定能够每次都达到他的容量。就比如烧水，并不是每一次都把水壶装满，才打开电源。但我们也不能让这个水壶里的水太少，否则每单位水消耗的电能就搞了，性价比就太低了。
 
-所以B+树保证一个索引块实际使用的指针数量d满足：`n/2<=d<=n`，也就是说，每次烧水，水壶里都至少有一半的水，做了一个折中（trade off）。
+所以B+树保证一个索引块实际使用的指针数量 d 满足：`n/2<=d<=n`，也就是说，每次烧水，水壶里都至少有一半的水，做了一个折中（trade off）。
 
 ```note
 B+树的需求
@@ -134,14 +140,14 @@ B+树的需求
 ```
 
 > B树和B+树相比，有两个最核心的区别：
-> 1. B树没有内部节点和叶子结点的区分，它的每个节点都是即存了key又存了data。
-> 2. 由于没有内部节点和叶子结点的区分，使得B+树没有将叶子结点用链表串联起来的结构。
+> 1. B 树没有内部节点和叶子结点的区分，它的每个节点都是即存了 key 又存了 data。
+> 2. 由于没有内部节点和叶子结点的区分，使得 B+ 树没有将叶子结点用链表串联起来的结构。
 >
 > 这两个区别给B树带来了两个检索的特点：
 > 1. 进行单个key查询时，B树最快可以在O(1)的时间代价内就查到。而从平均时间代价来看，会比B+树稍快一些。但波动会比较大，因为每个节点既存key又存data会使得树变高，底层的节点的IO次数就会变多。
 > 2. 进行范围查询时，由于缺乏叶子结点的连接，因此只能通过树的遍历来完成范围查询，这会涉及多个节点的IO问题，效率不如B+树。
 >
-> 因此，存在大量范围查询的场景，适合使用B+树（比如数据库）
+> 因此，存在大量范围查询的场景，适合使用 B+ 树（比如数据库）
 > 而对大量单个key查询的场景，可以考虑B树（比如NOSQL的MongoDB）
 > [原文链接](https://blog.csdn.net/Snippers/article/details/116121797)
 
@@ -229,7 +235,7 @@ B+树的需求
 存在的问题：
 - 当桶数组需要翻倍时，要做大量的工作（重新散列）
 - 当桶数翻倍后，其在主存中可能就装不下了，或者要占用更大的空间
-- 如果每块的记录数很少，那么很有可能某一块的分裂比在逻辑上需要的分裂时间提前很多。例如：块中存放2个记录，即使记录总数远小于220, 但也可能出现三个记录的前20位二进制位序列一样，在这种情况下，将不得不使用i=20和100万个桶数组*（即发生了数据倾斜的情况）
+- 如果每块的记录数很少，那么很有可能某一块的分裂比在逻辑上需要的分裂时间提前很多。例如：块中存放 2 个记录，即使记录总数远小于 220, 但也可能出现三个记录的前 20 位二进制位序列一样，在这种情况下，将不得不使用 i=20 和 100 万个桶数组(即发生了数据倾斜的情况）
 ```
 
 #### 线性散列索引
@@ -240,15 +246,17 @@ B+树的需求
 
 ```note
 符号约定：
-	i-当前使用的散列函数的位数
+	*i-当前使用的散列函数的位数
+	
 	n-当前的桶数
+	
 	r-当前散列表中的记录总数，r<=1.7n
 ```
 
 假定散列函数值的i位为桶数组项编号，且有一个键值为K的记录想要插入到编号为`a1a2…ai`的桶中, 即`a1a2…ai`是h(K)的后i位。把`a1a2…ai`当 作二进制整数，设它为m
 
 - 如果`m<n`，则编号为m的桶存在，并把记录存入该桶中
-- 如果`n<=m<2^i`, 那么桶还不存在，因此我们把记录存入桶`m-2^(i-1)`, 也就是当我们把`a1`(它肯定是1)改为0时对应的桶。
+- 如果`n<=m<2^i`, 那么桶还不存在，因此我们把记录存入桶`m-2^(i-1)`, 也就是当我们把`a1`(它肯定是 1)改为 0 时对应的桶。
 
 插入0101，需要分裂。
 
