--- a/数据库基础/规范化理论.md
+++ b/数据库基础/规范化理论.md
@@ -108,7 +108,17 @@ F: 函数依赖集
 
 没必要看
 
+## 不正确设计数据库导致的问题
 
+### 冗余
+
+![image-20210509162257292](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210509162257292.png)
+
+![image-20210509162406260](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210509162406260.png)
+
+### 插入异常、删除异常
+
+![image-20210509162437284](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210509162437284.png)
 
 ## 范式
 
@@ -276,7 +286,10 @@ F: 函数依赖集
 - 码：（管理员，物品名），（仓库名，物品名）
 - 主属性：仓库名、管理员、物品名
 - 非主属性：数量
-	∵ 不存在非主属性对码的部分函数依赖和传递函数依赖。∴ 此关系模式属于3NF。
+
+∵ 不存在非主属性对码的部分函数依赖和传递函数依赖。
+
+∴ 此关系模式属于3NF。
 
 基于此关系模式的关系（具体的数据）可能如图所示：
 
@@ -336,11 +349,11 @@ BCNF消除了**主属性对于码（候选键）的部分与传递函数依赖**
 
 
 ```note
-列坐标表示的是某个属性
+**列坐标**表示的是某个属性
 
-行坐标表示的是分解后的一个关系，里面可能包含多个属性
+**行坐标**表示的是分解后的一个关系，里面可能包含多个属性
 
-if 某个属性j属于某个关系i，则填写aj，else 填写bij
+if 某个属性j 属于 某个关系i，则填写aj，else 填写 bij
 ```
 
 示例：
@@ -357,7 +370,7 @@ if 某个属性j属于某个关系i，则填写aj，else 填写bij
 
 ```tip
 当把一个表拆成两个表的时候，可以快速判断：
-- 两者的交 -> 两者的差，则是无损连接。
+- 若两者的交 -> 两者的差，则是无损连接。
 
 ![image-20210504135943075](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504135943075.png)
 ```
@@ -377,7 +390,7 @@ if 某个属性j属于某个关系i，则填写aj，else 填写bij
 
 若G覆盖F，则是保持依赖的；反之不是。
 
-比如下面的例子，丢失了CE->A，因此不保持依赖。（不需要看他算法执行的步骤，只需要对于每个分解出来的R，看他包含了原来的函数依赖集F里的哪些函数依赖，再把这些函数依赖集加起来，如果和原来的函数依赖集一样，就是保持依赖的）
+比如下面的例子，丢失了CE->A，因此不保持依赖。（不需要看他算法执行的步骤，只需要对于每个分解出来的R，**看他包含了原来的函数依赖集F里的哪些函数依赖，再把这些函数依赖集加起来，如果和原来的函数依赖集一样，就是保持依赖的**）
 ```
 
 ![image-20210504140613463](%E8%A7%84%E8%8C%83%E5%8C%96%E7%90%86%E8%AE%BA.assets/image-20210504140613463.png)
