--- a/数据库基础/查询实现算法.md
+++ b/数据库基础/查询实现算法.md
@@ -15,9 +15,9 @@ sort: 8
 
 ### 基本实现算法
 
-只需要3块内存，复杂度高，每读一块block就要io一次，因此需要Br+Br*Rs次io
+只需要3块内存，复杂度高，每读一块 block 就要 io 一次，因此需要 Br+Br*Rs 次 io
 
-一块装R，一块装S，一块输出。
+一块装 R，一块装 S，一块输出。
 
 ```python
 while R 没读完
@@ -31,7 +31,7 @@ while R 没读完
 
 ### 全主存实现算法
 
-要求内存能够完全装下两个关系，因此需要 Br+Rs次io
+要求内存能够完全装下两个关系，因此需要 Br+Rs 次 io
 
 ```python
 全部读R和S
@@ -46,7 +46,7 @@ while R 没读完
 
 ### 半主存实现算法
 
-要求能装下一个关系，因此还是Br+Rs次io
+要求能装下一个关系，因此还是 Br+Rs 次 io
 
 ```python
 全部读R
@@ -62,7 +62,7 @@ while R 没读完
 
 ### 大关系实现算法
 
-前提假设：$B_s>=B_R, B_R<M$
+前提假设：B_s>=B_R, B_R<M​
 
 把S按`M-2`的数量划分为不同的子集，M为内存能放的磁盘块个数，剩下的，一块用来放R，一块用来输出。
 
@@ -133,3 +133,4 @@ while S 没读完
 ### 经验方法
 
 ![image-20210501172017778](%E6%9F%A5%E8%AF%A2%E5%AE%9E%E7%8E%B0%E7%AE%97%E6%B3%95.assets/image-20210501172017778.png)
+
