--- a/分布式/一致性.md
+++ b/分布式/一致性.md
@@ -19,18 +19,62 @@
 
 
 ### 以数据为中心的一致性
-综合现有的资料，一致性模型有以下几种，按我的理解将其与不同的时钟对应
-- Strict一致性，物理时钟（绝对全局时钟）
-- Linearizability一致性，全局时钟
-- Sequential一致性，逻辑时钟
-
-- Casual一致性，向量时钟
+综合现有的资料，一致性模型有以下几种
+- Strict一致性
+- Linearizability一致性
+- Sequential一致性
+- Casual一致性
 - FIFO一致性
 - Weak一致性
 - Release一致性
 - Entry一致性
 
+![image-20210510162344890](%E4%B8%80%E8%87%B4%E6%80%A7.assets/image-20210510162344890.png)
 
+### Linearizability && Sequential Consistency
+
+网上的中文资料林林总总，这个抄那个，那个抄这个，大多定义模糊，不知其所云。课件上的定义也比较抽象。
+
+下面给出定义和[参考资料](http://kaiyuan.me/2018/04/21/consistency-concept/)：
+
+**Linearizability** 
+
+> The result of any execution is the same as if the read and write operations by all processes on the data store were executed in some sequential order and the operations of each individual process appear in this sequence in the order specified by its program. In addition, if tsOP1(x) < tsOP2(y), then operation OP1(x) should precede OP2(y) in this sequence
+
+任何读取都必须读到最新写入的值
+
+**Sequential consistency**
+
+> The result of any execution is the same as if the read and write perations by all processes on the data store were executed in some sequential order. And the operations of each individual process appear in this sequence in the order specified by its program
+>
+> 所有的进程看到的操作的顺序是相同的
+
+### Casual Consistency
+
+比如下图中，我们认为 **P2 写入的 3 是基于它读出来的 1 计算出来的**，它读出来的 1 又是由 P1 的写入产生的，因此认为 P1 写入 1 和 P2 写入 3 具有因果关系。P4 没有观测到这个因果关系，所以这个系统不具备Causal Consistency。
+
+![Causal Consistency例子1](%E4%B8%80%E8%87%B4%E6%80%A7.assets/5cc8025e000141ff06820286.png)
+
+而下图中，认为P2写入3和P1写入1不具有因果关系，则P4和P3可以以任意顺序观测到它们。这个系统仍然可以说具有Causal consistency，但是不具备Sequential Consistency。
+![Causal Consistency例子2](%E4%B8%80%E8%87%B4%E6%80%A7.assets/5cc802c60001f5dd06820286.png)
+
+再例如下面这个图，（a）中，P2 先读了x，读出来的结果是a。我们认定接下来写入的 x=b 的结果是基于之前读出来的 a 计算出来的，因此 P1 与 P2 就有了因果关系，则 P3 和 P4 读到的结果顺序则应当遵循因果一致性，即先读到 x=a，再读到 x=b。
+
+而（b）中，则认为 P1 与 P2 是并发的，则 P3 和 P4 读到什么顺序的结果都是无所谓的。
+
+![image-20210510155859902](%E4%B8%80%E8%87%B4%E6%80%A7.assets/image-20210510155859902.png)
+
+### FIFO Consistency
+
+一个进程所做的所有的写操作是被其他的进程按照这些写操作发出的顺序看到的。
+
+但来自**不同进程的写操作**可能被**不同的进程**以**不同的顺序**看到的。
+
+![符合FIFO但不符合casual](%E4%B8%80%E8%87%B4%E6%80%A7.assets/image-20210510163855701.png)
+
+P2 先写 x=b，再写 x=c，则在 P3、P4 中看到的全是写入的顺序；
+
+但 P1 和 P2 写的可能就是乱序的了。
 
 
 ### 以客户端为中心的一致性（Client-centric Consistency）
@@ -48,14 +92,14 @@
 
 以客户端为中心的一致性包含了四种子模型：
 
-- 单调读一致性（Monotonic-read Consistency）：
+- **单调读一致性（Monotonic-read Consistency）：**
     如果一个进程读取数据项 x 的值，那么该进程对于 x 后续的所有读操作要么读取到第一次读取的值要么读取到更新的值。即保证客户端不会读取到旧值。
-- 单调写一致性（Monotonic-write Consistency）：
+- **单调写一致性（Monotonic-write Consistency）：**
     一个进程对数据项 x 的写操作必须在该进程对 x 执行任何后续写操作之前完成。即保证客户端的**写操作是串行的**。
-- 读写一致性（Read-your-writes Consistency）：
+- **读写一致性（Read-your-writes Consistency）：**
     一个进程对数据项 x 执行一次写操作的结果总是会被该进程对 x 执行的后续读操作看见。即保证客户端**能读到自己最新写入的值**。
-- 写读一致性（Writes-follow-reads Consistency）：
-    同一个进程对数据项 x 执行的读操作之后的写操作，保证发生在与 x 读取值相同或比之更新的值上。即保证客户端**对一个数据项的写操作是基于该客户端最新读取的值**。
+- **写读一致性（Writes-follow-reads Consistency）：**
+    同一个进程对数据项 x 执行的读操作之后的写操作，保证发生在与 x 读取值相同或比之更新的值上。即保证客户端**对一个数据项的写操作是基于该客户端最新读取的值**。（比如 x=x+1 ，如果读到的 x 不是最新的值，则 x+1 的结果是错误的，则这次写操作也将是错误的）
 
 ## 一致性协议
 
@@ -94,8 +138,8 @@
 由客户端来决定是否同步复制。
 
 - Coherence detection strategy（什么时候验证：三种）
-  - 在访问缓存的数据之前验证一致性
   - 不验证：假设是一致的
+  - 在访问缓存的数据之前验证一致性
   - 使用了缓存的数据之后再去验证一致性
 - Coherence enforcement strategy（怎么验证：三种）
   - 没有缓存共享数据（仅在服务器）
